<?xml version="1.0"?>
<package>
  <name>ev3infoumons_controller</name>
  <version>0.0.0</version>
  <description>The ev3infoumons_controller package</description>

  <maintainer email="pierre.hauweele@umons.ac.be">Pierre Hauweele</maintainer>

  <license>MIT</license>

  <!-- <url type="website"></url> -->

  <author email="pierre.hauweele@umons.ac.be">Pierre Hauweele</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ev3infoumons_description</build_depend>
  <run_depend>ev3infoumons_description</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>diff_drive_controller</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
