<?xml version="1.0"?>
<package>
  <name>uwb_localization</name>
  <version>0.0.0</version>
  <description>Provides odometry from uwb localization.</description>

  <maintainer email="pierre.hauweele@umons.ac.be">Pierre Hauweele</maintainer>

  <license>MIT</license>

  <!-- <url type="website"></url> -->

  <author email="pierre.hauweele@umons.ac.be">
    Pierre Hauweele
  </author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>rospy</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
